...
                    maxChars = newValue // put the newValue into maxChars **only in scope in this set!**
                    UserDefaults.standard.set(maxChars, forKey: "MaxCharacterCount") // Save this setting under the key "MaxCharacterCount", passing in the scoped value of maxChars
                }

            ), in: range, step:step) {
                Text("Max Character Count: \(maxChars)")
            }.accessibilityIdentifier("MaxCountStepper")
        }.padding()
    }
}

func color2array(colour: Color) -> [CGFloat] {
       let uiColor = UIColor(colour)
...
